# ChatApp

./: App.tsx  package.json  rust_module.ts  xRoadMap.md
android/app/src/main/java/com/chatapp/: MainApplication.java  RustModule.java  RustModulePackage.java
components/: ChatThreadCard.test.tsx  ChatThreadCard.tsx
i18n/: i18n.ts
ios/: rust_module.h  rust_module.m
ios/ChatApp/: Info.plist
ios/ChatApp.xcodeproj/: project.pbxproj
navigation/: AppNavigator.tsx
rust_module/: Cargo.toml  cargo-config.toml
rust_module/rust_module.xcframework/: Info.plist
rust_module/rust_module.xcframework/ios-arm64/: Headers
rust_module/src/: lib.rs
screens/: ChatScreen.tsx  Chats.tsx  Contacts.tsx  Settings.tsx  ThreadScreen.tsx
scripts/: build_android.sh  build_ios.sh
types/: navigation.type.ts
